# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "mailhub.su",
+    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/api/v1/answers": {
@@ -299,6 +299,54 @@
                 }
             }
         },
+        "/api/v1/email/get/file/{id}": {
+            "get": {
+                "description": "Retrieve a file by its ID from the email service",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "files"
+                ],
+                "summary": "Retrieve a file by its ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the file",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "CSRF Token",
+                        "name": "X-Csrf-Token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "File retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad ID in request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "File not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/email/send": {
             "post": {
                 "description": "Send a new email message to the system",
@@ -471,6 +519,64 @@
                     },
                     "404": {
                         "description": "Email not found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/email/{id}/addattachment": {
+            "post": {
+                "description": "Add an attachment to an email message by its ID",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "files"
+                ],
+                "summary": "Add an attachment to an email message",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID of the email message",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "Attachment file to upload",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "CSRF Token",
+                        "name": "X-Csrf-Token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Attachment added successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad id in request or bad JSON in request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Failed to add attachment",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
